# CircleWave

./: .gitignore  CHANGELOG.md  README.md  build-windows.yml  circlewave.py  circlewave.spec  circlewave_core.py  constraints.txt  pyproject.toml  requirements.txt
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
tests/: test_core.py
